# projem

./: .coverage  .editorconfig  .env.clamav.example  .env.dev.example  .env.example  .env.prod.example  .env.prod.task3.12.example  .env.test  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .releaserc.json  CLAUDE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_PRODUCTION_TEST_REPORT.md  COMPREHENSIVE_TEST_REPORT.md  DATABASE_VALIDATION_REPORT.md  FINAL_DATABASE_STATUS_REPORT.md  FIXES_PR518_SUMMARY.md  FIXES_PR520_ASYNC_IO.md  FIXES_PR521_FINAL_ASYNC_CLEANUP.md  FIXES_PR522_COMPLETE_ASYNC.md  FIXES_PR534_ASYNC_IO.md  FIXES_PR_114_COMPLETE.md  FIX_PR393_TOOL_ACCESSIBILITY.md  GEMINI_CODE_ASSIST_FIXES_APPLIED.md  GEMINI_CODE_ASSIST_FIXES_COMPLETE.md  GEMINI_COPILOT_FIXES_PR108.md  GEMINI_FIXES_APPLIED_SUMMARY.md  GEMINI_FIXES_PR127_SUMMARY.md  GEMINI_FIXES_TASK_28.md  GEMINI_OIDC_SECURITY_FIXES_COMPLETE.md  GEMINI_PR_46_FIXES_COMPLETE.md  GEMINI_PR_47_FIXES_COMPLETE.md  GEMINI_REVIEW_FIXES.md  GITHUB_ACTIONS_FIXES.md  MIGRATION_STATUS_REPORT.md  Makefile  OIDC_SECURITY_FIXES_TASK_35.md  (+143 more)
apps/api/: .coverage  .dockerignore  .env  .env.test  CLAMAV_INTEGRATION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.freecad  Dockerfile.workers  JWT_CONFIG.md  LOGGING_GUIDE.md  PR403_EXCEPTION_HANDLING_FIXES.md  RBAC_IMPLEMENTATION.md  SECURITY.md  alembic.ini  analyze_migrations.py  coverage.xml  example_audit_integration.py  fix_migrations.py  pyproject.toml  requirements.txt  start-beat.sh  start-worker.sh  start.sh  test_gemini_fixes_standalone.py  test_metrics_isolated.py  test_metrics_quick.py  test_multiworker_profiling.py  test_multiworker_profiling_standalone.py  test_pr454_formatting.py  test_pr494_fixes.py  test_pr495_fixes.py  test_task_44_invoice_implementation.py  test_telemetry_precision.py  test_ultra_enterprise_validation.py  validate-dockerfiles.sh  validate_task_27_implementation.py  verify_fixes.py  verify_pr454_fixes.py  verify_pr455_fixes.py
apps/api/.ruff_cache/0.12.9/: 1715530930180443117  2091579505852863196  2843753679932747421  3754328628775753207  4859515076087851698  5134073417579352351  6145201947550679592  6931086646122188546  7262764480327375261  8039052248657988253  9417907035724225024
apps/api/.ruff_cache/0.4.8/: 1462511812699379090  152075855207758557  1791822237378105953  1908753659906926066  2926998119973551781  3919165208062863260  5416604858259514643  7115337540710127191  8731990723935298084  90386368931332547  9290042256117585267  9942468494926731910
apps/api/alembic/: MIGRATION_BEST_PRACTICES.md  MIGRATION_SECURITY_GUIDE.md  TASK_2_2_IMPLEMENTATION_SUMMARY.md  env.py  migration_helpers.py
apps/api/alembic/utils/: batch_update.py
apps/api/alembic/versions/: 0011_complete_schema.py  20250112_add_batch_processing.py  20250120_add_file_metadata_tables.py  20250817_0000-base_revision_enterprise_foundation.py  20250817_1100_create_core_tables.py  20250817_1200-task_23_core_tables_optimization.py  20250817_1500-task_24_operational_tables_enterprise_erd_compliance.py  20250817_1530-init_basic_tables.py  20250817_1530_init_basic_tables.py  20250817_1600-task_25_billing_tables_enterprise_financial_precision.py  20250817_1700-task_26_security_audit_tables.py  20250817_1700-task_26_security_audit_tables.py.bak  20250817_1800-task_27_global_constraints_performance_indexes.py  20250817_1800-task_27_global_constraints_performance_indexes.py.bak  20250817_1900-task_28_seed_data_migration.py  20250817_2000-add_3d_printer_enum_gemini_fix.py  20250817_2030-task_31_enterprise_auth_fields.py  20250817_2030_task_31_enterprise_auth_fields.py  20250817_2045-task_32_enterprise_sessions_table.py  20250817_2045_task_32_enterprise_sessions_table.py  20250817_2100-task_35_oidc_accounts_table.py  20250817_2100_task_35_oidc_accounts_table.py  20250817_2200-task_36_magic_links_table.py  20250817_2200_task_36_magic_links_table.py  20250817_2245-task_311_audit_correlation_pii_fields.py  20250817_2245_task_311_audit_correlation_pii_fields.py  20250818_0000-task_37_mfa_totp_tables.py  20250818_0000_task_37_mfa_totp_tables.py  20250818_1000-task_41_license_domain_model.py  20250818_1000_task_41_license_domain_model.py  20250818_1100-task_44_invoice_model_numbering_vat.py  20250818_1100_task_44_invoice_model_numbering_vat.py  20250818_add_idempotency_records_table.py  20250819_0000-task_47_notification_service_email_sms_provider_fallback.py  20250819_1200-task_46_payment_provider_abstraction.py  (+19 more)
apps/api/app/: audit.py  auth.py  config.py  db.py  events.py  instrumentation.py  llm.py  llm_router.py  logging_setup.py  main.py  main_with_structlog.py  metrics.py  models.py  models_tooling.py  sentry_setup.py  settings.py  storage.py  storage_download.py
apps/api/scripts/: fix_migration_chain.py  quick_model_validation.py  run_migration_integrity_tests.py  test_task_6_10_coverage.py  validate_model_parity.py  validate_test_environment.py  verify_pr447_fixes.py
apps/api/tests/: test_a4_assembly_cache.py  test_admin_dlq.py  test_ai_adapter.py  test_assembly4_comprehensive.py  test_audit_chain.py  test_batch_processing.py  test_batch_update_migration.py  test_bucket_service.py  test_cache_performance.py  test_clamav_file_service_integration.py  test_clamav_service.py  test_collaboration_initial_state.py  test_core_constants_ratios.py  test_csrf_protection.py  test_deterministic_export.py  test_dev_mode_middleware.py  test_exception_handling_pr403.py  test_file_upload.py  test_file_upload_task55.py  test_freecad_document_manager.py  test_freecad_service.py  test_geometry_validator_tool_accessibility.py  test_health.py  test_invoice_service.py  test_job_cancellation.py  test_job_routing.py  test_job_status_api.py  test_job_status_simple.py  test_license_fixes.py  test_license_middleware.py  test_magic_link.py  test_metrics_extraction.py  test_mfa_integration.py  test_migration_config.py  test_minio_config.py  test_model_validation.py  test_model_version_control.py  test_observability.py  test_oidc_auth.py  test_payment_transaction_rollback_scenarios.py  (+42 more)
apps/api/tools/: gen_golden.py
(+1089 files in other folders)
